--- a/evadb_instance/nginx.conf
+++ b/evadb_instance/nginx.conf
@@ -1,44 +1,69 @@
+# Set the number of worker processes to 1
 worker_processes 1;
-daemon off; # Prevent forking
 
+# Turn off daemon mode to prevent forking
+daemon off;
 
+# Specify the path to the process ID file
 pid /tmp/nginx.pid;
+
+# Specify the path to the error log file
 error_log /var/log/nginx/error.log;
 
+# Define the events block
 events 
 {
-    # defaults
+    # Use default settings
+    # (e.g., number of connections, etc.)
 }
 
+# Define the http block
 http 
 {
+    # Include MIME types configuration
     include /etc/nginx/mime.types;
+
+    # Set the default MIME type
     default_type application/octet-stream;
+
+    # Configure access log settings
     access_log /var/log/nginx/access.log combined;
-    
+
+    # Define an upstream block named "gunicorn"
     upstream gunicorn 
     {
         server unix:/tmp/gunicorn.sock;
     }
 
+    # Define a server block
     server 
     {
+        # Listen on port 8080 with deferred acceptance
         listen 8080 deferred;
+
+        # Set the maximum allowed size of the client request body
         client_max_body_size 5m;
 
+        # Set the keepalive timeout and proxy read timeout
         keepalive_timeout 5;
         proxy_read_timeout 1200s;
 
+        # Define a location block for paths starting with /ping or /invocations
         location ~ ^/(ping|invocations) 
         {
+            # Set proxy headers
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
+            
+            # Proxy the request to the "gunicorn" upstream
             proxy_pass http://gunicorn;
         }
 
+        # Define a location block for other paths
         location / 
         {
+            # Return a 404 response with an empty JSON object
             return 404 "{}";
         }
     }
